--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -26,8 +26,13 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.3'
 
-    // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.34'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
+
+    runtimeOnly 'com.h2database:h2'
 
 }
 
