--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 
     runtimeOnly 'com.h2database:h2'
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
+
 }
 
 tasks.named('test') {
