--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -21,3 +21,24 @@ spring:
       enabled: true
       path: /h2-console
 
+
+
+#### SWAGGER
+
+#swagger-ui ??
+#swagger-ui ?? ??(http://localhost:4000/swagger-ui/index.html)
+springdoc:
+  swagger-ui.path: /swagger-ui.html
+  #OpenAPI JSON ?? ?? ?? (http://localhost:4000/api-docs)
+  api-docs.path: /api-docs
+  #?? ?? ??? json
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+  swagger-ui:
+    #ui ??? ? ??
+    operations-sorter: alpha
+    tags-sorter: alpha
+    #swagger url ????, json? ? config ?? ?? ????? ???? swagger-ui? ????? ?
+    disable-swagger-default: true
+    display-query-params-without-oauth2: true
+    doc-expansion: none
