ADD: CRUD API doc 적용

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -26,10 +26,10 @@ spring:
 #### SWAGGER
 
 #swagger-ui ??
-#swagger-ui ?? ??(http://localhost:4000/swagger-ui/index.html)
+#swagger-ui ?? ??(http://localhost:{server.port}/swagger-ui/index.html)
 springdoc:
   swagger-ui.path: /swagger-ui.html
-  #OpenAPI JSON ?? ?? ?? (http://localhost:4000/api-docs)
+  #OpenAPI JSON ?? ?? ?? (http://localhost:{server.port}/api-docs)
   api-docs.path: /api-docs
   #?? ?? ??? json
   default-consumes-media-type: application/json
