--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -24,17 +24,23 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web:3.3.3'
 
+    //jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.3'
 
+    //lombok
     compileOnly 'org.projectlombok:lombok:1.18.34'
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
-
     testCompileOnly 'org.projectlombok:lombok:1.18.34'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
 
+    //h2db
     runtimeOnly 'com.h2database:h2'
 
+    //spring doc
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
+
+    //valid
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.1'
 
 }
 
