ADD: Spring AOP 템플릿 추가

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -40,3 +40,7 @@ springdoc:
     disable-swagger-default: true
     display-query-params-without-oauth2: true
     doc-expansion: none
+
+logging:
+  level:
+    root: info
