--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     //valid
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.1'
 
+    //aop
+    implementation 'org.springframework.boot:spring-boot-starter-aop:3.2.0'
+
 }
 
 tasks.named('test') {
