ADD: 파일 업로드 기능, 테스트 코드 작성중..

--- a/BE/src/main/resources/application-test.yml
+++ b/BE/src/main/resources/application-test.yml
@@ -13,8 +13,11 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    generate-ddl: true
+
 
   h2:
     console:
