--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -45,8 +45,12 @@ dependencies {
     //aop
     implementation 'org.springframework.boot:spring-boot-starter-aop:3.2.0'
 
+    //file upload thumbnail
+    implementation 'net.coobird:thumbnailator:0.4.14'
+
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
