FIX: 다중 파일 업로드를 위한 Swagger 코드 수정

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -15,12 +15,18 @@ spring:
     hibernate:
       ddl-auto: create
     database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
 
   h2:
     console:
       enabled: true
       path: /h2-console
 
+### upload file limit
+  servlet:
+    multipart:
+      max-file-size: 3MB
+      max-request-size: 3MB
 #### SWAGGER
 
 #swagger-ui ??
