--- a/BE/src/main/resources/application-test.yml
+++ b/BE/src/main/resources/application-test.yml
@@ -24,3 +24,8 @@ spring:
       enabled: true
       path: /h2-console
 
+  ### upload file limit
+  servlet:
+    multipart:
+      max-file-size: 3MB
+      max-request-size: 3MB
