REF: 도메인 위주로 코드 이전 리펙토링

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -27,6 +27,7 @@ spring:
     multipart:
       max-file-size: 3MB
       max-request-size: 3MB
+      enabled: true
 #### SWAGGER
 
 #swagger-ui ??
