--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     //file upload thumbnail
     implementation 'net.coobird:thumbnailator:0.4.14'
 
+//    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0'
+
 }
 
 tasks.named('test') {
