--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -42,12 +42,6 @@ dependencies {
     //spring doc
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
 
-
-//    implementation 'io.springfox:springfox-boot-starter:3.0.0'
-//    // 또는
-//    implementation 'org.springdoc:springdoc-openapi-ui:1.5.9'
-
-
     //valid
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.1'
 
@@ -56,6 +50,9 @@ dependencies {
 
     //file upload thumbnail
     implementation 'net.coobird:thumbnailator:0.4.14'
+
+    //oauth2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.3.4'
 
 }
 
