--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -27,25 +27,61 @@ spring:
     multipart:
       max-file-size: 3MB
       max-request-size: 3MB
-#### SWAGGER
 
-#swagger-ui ??
-#swagger-ui ?? ??(http://localhost:{server.port}/swagger-ui/index.html)
+#### SWAGGER
 springdoc:
   swagger-ui.path: /swagger-ui.html
-  #OpenAPI JSON ?? ?? ?? (http://localhost:{server.port}/api-docs)
   api-docs.path: /api-docs
-  #?? ?? ??? json
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
   swagger-ui:
-    #ui ??? ? ??
     operations-sorter: alpha
     tags-sorter: alpha
-    #swagger url ????, json? ? config ?? ?? ????? ???? swagger-ui? ????? ?
     disable-swagger-default: true
     display-query-params-without-oauth2: true
     doc-expansion: none
+
+
+  security:
+    oauth2:
+      client:
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          naver:
+            authorization_uri: https://nid.naver.com/oauth2.0/authorize
+            token_uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user_name_attribute: response
+
+        registration:
+          kakao:
+            client-id: 여기에 Client Id 입력
+            client-secret: 여기에 Security Id 입력
+            client-authentication-method: client_secret_post
+            redirect-uri: https://localhost:${server.port}/login/oauth2/code/kakao
+            authorization-grant-type: authorization_code
+            client-name: kakao
+            scope:
+              - profile_nickname
+          naver:
+            client-id:
+            client-secret:
+            redirect-uri:
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            scope:
+              - name
+            google:
+              client-id:
+              client-secret:
+              scope:
+                - email
+                - profile
+
 
 logging:
   level:
