--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -57,7 +57,11 @@ dependencies {
     //file upload thumbnail
     implementation 'net.coobird:thumbnailator:0.4.14'
 
-//    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+
+    //implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.3.4'
 
 }
 
