--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: 8083
 
 spring:
   application:
@@ -42,45 +42,45 @@ springdoc:
     doc-expansion: none
 
 
-  security:
-    oauth2:
-      client:
-        provider:
-          kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
-          naver:
-            authorization_uri: https://nid.naver.com/oauth2.0/authorize
-            token_uri: https://nid.naver.com/oauth2.0/token
-            user-info-uri: https://openapi.naver.com/v1/nid/me
-            user_name_attribute: response
-
-        registration:
-          kakao:
-            client-id: 여기에 Client Id 입력
-            client-secret: 여기에 Security Id 입력
-            client-authentication-method: client_secret_post
-            redirect-uri: https://localhost:${server.port}/login/oauth2/code/kakao
-            authorization-grant-type: authorization_code
-            client-name: kakao
-            scope:
-              - profile_nickname
-          naver:
-            client-id:
-            client-secret:
-            redirect-uri:
-            client-name: Naver
-            authorization-grant-type: authorization_code
-            scope:
-              - name
-            google:
-              client-id:
-              client-secret:
-              scope:
-                - email
-                - profile
+#  security:
+#    oauth2:
+#      client:
+#        provider:
+#          kakao:
+#            authorization-uri: https://kauth.kakao.com/oauth/authorize
+#            token-uri: https://kauth.kakao.com/oauth/token
+#            user-info-uri: https://kapi.kakao.com/v2/user/me
+#            user-name-attribute: id
+#          naver:
+#            authorization_uri: https://nid.naver.com/oauth2.0/authorize
+#            token_uri: https://nid.naver.com/oauth2.0/token
+#            user-info-uri: https://openapi.naver.com/v1/nid/me
+#            user_name_attribute: response
+#
+#        registration:
+#          kakao:
+#            client-id: 여기에 Client Id 입력
+#            client-secret: 여기에 Security Id 입력
+#            client-authentication-method: client_secret_post
+#            redirect-uri: https://localhost:${server.port}/login/oauth2/code/kakao
+#            authorization-grant-type: authorization_code
+#            client-name: kakao
+#            scope:
+#              - profile_nickname
+#          naver:
+#            client-id:
+#            client-secret:
+#            redirect-uri:
+#            client-name: Naver
+#            authorization-grant-type: authorization_code
+#            scope:
+#              - name
+#            google:
+#              client-id:
+#              client-secret:
+#              scope:
+#                - email
+#                - profile
 
 
 logging:
