--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -42,12 +42,6 @@ dependencies {
     //spring doc
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
 
-
-//    implementation 'io.springfox:springfox-boot-starter:3.0.0'
-//    // 또는
-//    implementation 'org.springdoc:springdoc-openapi-ui:1.5.9'
-
-
     //valid
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.1'
 
@@ -57,11 +51,20 @@ dependencies {
     //file upload thumbnail
     implementation 'net.coobird:thumbnailator:0.4.14'
 
+    //jackson
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
 
-    //implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.3.4'
+    //oauth2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.3.4'
+
+    //QueryDsl
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
 
 }
 
@@ -74,6 +77,7 @@ tasks.withType(Test) {
     enabled = false
 }
 
+//빌드 시 테스트 코드는 제외하고 패키지 한다.
 //sourceSets {
 //    test {
 //        java {
@@ -81,6 +85,20 @@ tasks.withType(Test) {
 //        }
 //    }
 //}
+
+def generated = 'src/main/generated'// querydsl QClass 파일 생성 위치를 지정
+tasks.withType(JavaCompile) {
+ options.generatedSourceOutputDirectory = file(generated)
+}
+// java source set 에 querydsl QClass 위치 추가
+sourceSets {
+    main.java.srcDirs += "$projectDir/build/generated"
+}
+
+//gradle clean 시에 QClass 디렉토리 삭제
+clean {
+    delete file('src/main/generated')
+}
 
 
 
