ADD: 카테고리 글 & 분석 글 작성 로직(Create, Select) 테스트 코드 작성

--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -66,6 +66,10 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 
+    //security for testing
+    testImplementation 'org.springframework.security:spring-security-test:6.3.3'
+
+
 }
 
 tasks.named('test') {
