--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -69,6 +69,10 @@ dependencies {
     //security for testing
     testImplementation 'org.springframework.security:spring-security-test:6.3.3'
 
+    //jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
 }
 
