--- a/BE/src/main/resources/application-h2.yml
+++ b/BE/src/main/resources/application-h2.yml
@@ -41,10 +41,10 @@ spring:
         #
         registration:
           kakao:
-            client-id: ${client-id}
+            client-id: 4b7adc32013accf7909b512bd1f252ac
             client-secret: 여기에 Security Id 입력
             client-authentication-method: client_secret_post
-            redirect-uri: http://localhost:8033/member/logincallback1
+            redirect-uri: http://localhost:8082/login/callback
             authorization-grant-type: authorization_code
             client-name: kakao
             scope:
