--- a/BE/src/main/resources/application-mysql.yml
+++ b/BE/src/main/resources/application-mysql.yml
@@ -44,7 +44,7 @@ spring:
             client-id: ${client-id}
             client-secret: 여기에 Security Id 입력
             client-authentication-method: client_secret_post
-            redirect-uri: http://localhost:8033/member/logincallback1
+            redirect-uri: http://localhost:8082/login/callback
             authorization-grant-type: authorization_code
             client-name: kakao
             scope:
