--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -23,47 +23,32 @@ spring:
       path: /h2-console
       settings:
         web-allow-others: true
+#
+#  security:
+#    oauth2:
+#      client:
+#        provider:
+#          kakao:
+#            authorization-uri: https://kauth.kakao.com/oauth/authorize
+#            token-uri: https://kauth.kakao.com/oauth/token
+#            user-info-uri: https://kapi.kakao.com/v2/user/me
+#            user-name-attribute: id
+#        registration:
+#          kakao:
+#            client-id: 4b7adc32013accf7909b512bd1f252ac
+#            client-secret: rfm4eja7oEH6h0GyR4GqQOpE5j8zIdoM
+#            client-authentication-method: client_secret_post
+#            redirect-uri: http://localhost:8082/login/oauth2/code/kakao
+#            authorization-grant-type: authorization_code
+#            client-name: kakao
+#            scope:
+#              - profile_nickname
+#              - account_email
 
-  security:
-    oauth2:
-      client:
-        provider:
-          kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
-        #          naver:
-        #            authorization_uri: https://nid.naver.com/oauth2.0/authorize
-        #            token_uri: https://nid.naver.com/oauth2.0/token
-        #            user-info-uri: https://openapi.naver.com/v1/nid/me
-        #            user_name_attribute: response
-        #
-        registration:
-          kakao:
-            client-id: ${client-id}
-            client-secret: 여기에 Security Id 입력
-            client-authentication-method: client_secret_post
-            redirect-uri: http://localhost:8033/member/logincallback1
-            authorization-grant-type: authorization_code
-            client-name: kakao
-            scope:
-              - profile_nickname
-      #          naver:
-      #            client-id:
-      #            client-secret:
-      #            redirect-uri:
-      #            client-name: Naver
-      #            authorization-grant-type: authorization_code
-      #            scope:
-      #              - name
-      #            google:
-      #              client-id:
-      #              client-secret:
-      #              scope:
-      #                - email
-      #                - profile
-
+kakao:
+  login:
+    success:
+      client-redirect-uri: http://localhost:3000/login/success
 
 ### upload file limit
   servlet:
@@ -90,4 +75,7 @@ springdoc:
 
 logging:
   level:
+    org:
+      springframework:
+        security=DEBUG:
     root: info
